crates/gelx/tests/compile/macros/invalid_query_file.stderr
error: failed to read query file at $WORKSPACE/target/tests/trybuild/gelx/queries/invalid.edgeql: No such file or directory (os error 2)
 --> tests/compile/macros/invalid_query_file.rs:4:8
  |
4 |     gelx!(invalid);
  |           ^^^^^^^
