crates/gelx/tests/compile/macros/invalid_query_file.rs
use gelx::gelx;

fn main() {
	gelx!(invalid);
}
